# ansible-role-consul

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  pyproject.toml
defaults/: main.yml
files/: dnsmasq.conf
filter_plugins/: custom.py
handlers/: main.yml
meta/: main.yaml  main.yml
molecule/aws/: converge.yaml  create.yaml  molecule.yml
molecule/default/: converge.yaml  converge.yml  molecule.yaml  molecule.yml
molecule/resources/tests/: test_default.py
molecule/vagrant-cluster/: converge.yml  molecule.yml
tasks/: ansible_host_install.yml  configure.yml  configure_bootstrap.yml  configure_dnsmasq.yml  configure_envoy.yml  dirs.yml  dnsmasq.yml  install.yml  install_dnsmasq.yml  install_envoy.yml  main.yml  setup-RedHat.yml  users.yml
templates/: bootstrap-outputs.txt.j2  consul-service.service.j2  consul.hcl.j2  consul.service.j2  dhclient.conf.j2  override.conf.j2  resolv.dnsmasq.j2  server.hcl.j2
